# 7z.py

./: .gitignore  LICENSE  README.md  example.py  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mf_7z/: _callbacks.py  _com.py  _guids.py  _propvariant.py  _streams.py  entry.py  exceptions.py  reader.py  writer.py
src/py7z/: __init__.py  _callbacks.py  _com.py  _dll.py  _guids.py  _propvariant.py  _streams.py  entry.py  exceptions.py  progress.py  reader.py  writer.py
tests/mf_7z/: test_progress.py  test_reader.py  test_writer.py
tests/py7z/: test_integration.py  test_progress.py  test_reader.py  test_writer.py
